# goph419-f2024-lecex

./: .gitignore  README.md  pyproject.toml
examples/: binaryintegersexample.py  functionsexample.py
notes/: loops  types
src/midterm2/question 1/: q1c_driver.py
src/midterm2/question1/: q1_driver.py  q1a.py  q1c_driver.py
src/topic1/: bigendian.py
src/topic1/examples/: binaryintegersexample.py
src/topic1classexercises/: binaryintegers.py
src/topic1labexercises/: functions.py
src/topic2/: array.py  linalg.py
src/topic2/examples/: array.py
