[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lecex
version = "0.0.1"
authors = [
    { name="Sydney Pasloski", email="sydney.pasloski@ucalgary.ca" },
]
description="what lab01 actually does"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/sydpas/goph419-f2024-lecex"